[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ipy_dict_hierarchy"
version = "0.0.2"
authors = [
  { name="F. Paul Spitzner", email="paul.spitzner@ds.mpg.de" },
]
description = "IPython Extension to pretty print nested dicts"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: IPython",
    "Topic :: Utilities",
]
